<resources>
    <string name="app_name">My menti</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Добавить</string>
    <string name="name">Имя</string>
    <string name="namee">Имя:</string>
    <string name="name_label">Имя:</string>
    <string name="name_hint">Введите имя</string>
    <string name="group_label">Группа:</string>
    <string name="group_hint">Введите группу</string>
    <string name="month_label">Месяц:</string>
    <string name="month_hint">Введите месяц</string>
    <string name="description_label">Описание:</string>
    <string name="description_hint">Введите описание</string>
    <string name="telegram">Telegram</string>
    <string name="telegram_label">Telegram:</string>
    <string name="telegram_hint">Введите ссылку на Telegram</string>

    <!-- Текст для кнопок -->
    <string name="back_button_text">Назад</string>
    <string name="save_button_text">Сохранить</string>
    <string name="change">Изменить</string>
</resources>