<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".ui.fragment.Add.AddFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Поле для имени -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/name_label"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/name_hint"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <!-- Поле для группы -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/group_label"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/group_hint"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <!-- Поле для месяца -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/month_label"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/month_hint"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />


            <!-- Поле для описания -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description_label"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edit_text"
                android:gravity="top"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp" />

            <!-- Поле для ссылки на Telegram -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/telegram_label"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_telegram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/telegram_hint"
                android:inputType="textUri"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_gray"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/gray"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_cold"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/cold"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="0dp" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_red"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/red"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="0dp" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_yellow"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/yellow"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="0dp" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_green"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/green"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="0dp" />


            </LinearLayout>


            <!-- Кнопки "Назад" и "Сохранить" -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_back"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/dark_gray"
                    android:text="@string/back_button_text"
                    android:textColor="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/dark_gray"
                    android:text="@string/save_button_text"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>