<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:id="@+id/detailMentiFragment"
    tools:context=".ui.fragment.Detail.DetailMentiFragment">

    <!-- Back Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="10dp">

        <ImageView
            android:id="@+id/back"
            android:layout_gravity="start|center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_margin="20dp"
            android:contentDescription="Back"
            android:src="@drawable/baseline_arrow_back_ios_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginStart="190dp"
            android:backgroundTint="@color/light_gray"
            android:padding="18dp"
            android:text="@string/change"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <!-- Name TextView -->
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/name_label"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <!-- Group TextView -->
    <TextView
        android:id="@+id/tv_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/group_label"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <!-- Month TextView -->
    <TextView
        android:id="@+id/tv_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/month_label"
        android:textColor="@color/white"
        android:textSize="24sp" />
    <!-- Telegram TextView -->
    <TextView
        android:id="@+id/tv_telegram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:autoLink="web"
        android:text="@string/telegram"
        android:textColor="@color/blue"
        android:textSize="24sp" />

    <!-- Description TextView -->
    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        tools:text="Описание, которое должно быть показано в этой области. Длинный текст, чтобы показать пример текста для данного элемента." />


</LinearLayout>
